2005-02-08  Sven Neumann  <sven@gimp.org>

	* plug-ins/winicon/icosave.c (ico_image_get_reduced_buf): fixed
	bug in save routine for 256-slot palette (bug #162742).

2005-02-08  Sven Neumann  <sven@gimp.org>

	* configure.in: added automake conditional GIMP_UNSTABLE.

	* plug-ins/script-fu/scripts/Makefile.am: install test-sphere.scm
	in unstable releases only.

2005-02-08  Sven Neumann  <sven@gimp.org>

	* libgimpconfig/gimpcolorconfig-enums.[ch]: gimp-mkenums doesn't
	seem to like newlines in enum definitions.

	* libgimpconfig/gimpcolorconfig.[ch]: removed the "profile-path"
	property for now. It doesn't work too well with GimpFileEntry.
	We can add it back later if it turns out that we really need it.

	* app/dialogs/preferences-dialog.c
	* app/widgets/gimphelp-ids.h: added a color management page to the
	preferences dialog.

2005-02-07  Michael Natterer  <mitch@gimp.org>

	* plug-ins/uri/uri-backend.h: added backend methods for saving to
	URIs.

	* plug-ins/uri/uri.c: register a save procecure if the save method
	is available, using some code from compressor.c

	* plug-ins/uri/uri-backend-gnomevfs.c: implement saving.

	* plug-ins/uri/uri-backend-wget.c: added saving stubs which always
	fail.

2005-02-07  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpfiledialog.c (gimp_file_dialog_add_filters): add
	an "All Images" filter and select it by default.

2005-02-07  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpselectiondata.c
	* plug-ins/help/domain.c
	* plug-ins/helpbrowser/dialog.c: fixed my latest changes.

2005-02-07  Michael Natterer  <mitch@gimp.org>

	* app/dialogs/file-open-location-dialog.c
	(file_open_location_dialog_new): set "activates-default" on the
	URI entry.

2005-02-07  Sven Neumann  <sven@gimp.org>

	* plug-ins/help/domain.c
	* plug-ins/helpbrowser/dialog.c: same trick here; should allow to
	work with help files installed in an UNC path.

2005-02-07  Sven Neumann  <sven@gimp.org>

	* app/dialogs/file-open-dialog.c