@@ -1,3 +1,11 @@
+2005-02-08  Michael Natterer  <mitch@gimp.org>
+
+	* app/gui/gui.c (gui_display_changed): if display became NULL
+	(e.g. by closing a view) and we decide to activate another view
+	of the same image, stop the emission of the original
+	"display-changed" signal so it doesn't affect the toolbox'
+	UI manager. Fixes bug #159304.
+
 2005-02-08  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/winicon/icosave.c (ico_image_get_reduced_buf): fixed
